--- a/simulations results7.Rmd
+++ b/simulations results7.Rmd
@@ -19,6 +19,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ##
 results <- NA
 source('~/Documents/overdispersion/readresults7.R')
+# colnames(results)
 
 # This csv file contains 20 columns:
 #   Population, phi, n, b1, b2, N  (that is 6)
@@ -38,25 +39,26 @@ results[which(results$phi == 1),"Population"] <- "Poisson"
 
 ```{r }
 library(knitr)
-kable(results[,c(1:6,19,20,7,8,9)],
+header.cols <- c(1,3,4,5,19,20,2)
+kable(results[,c(header.cols,7,8,9)],
       caption='Coverage of 90% CIs',
       digits=2)
 ```
 
 ```{r }
-kable(results[,c(1:6,19,20,10,11,12)],
-      caption='CI for beta includes zero',
+kable(results[,c(header.cols,10,11,12)],
+      caption='CI for beta excludes zero',
       digits=2)
 ```
 
 ```{r }
-kable(results[,c(1:6,19,20,13,14,15)],
+kable(results[,c(header.cols,13,14,15)],
       caption = '90% CIs median width',
       digits = 2)
 ```
 
 ```{r }
-kable(results[,c(1:6,19,20,16,17,18)],
+kable(results[,c(header.cols,16,17,18)],
       caption = 'Proportion of times method does not work',
     digits = 2)
 ```
